<resources>
    <string name="app_name">工资核算</string>
    <string name="menu_frame_add_employee">添加职员</string>
    <string name="add_employee_name_string">姓名</string>
    <string name="add_employee_base_salary_string">基本工资</string>
    <string name="add_employee_date_string">入职时间</string>
    <string name="wait_input">请输入…</string>
    <string name="salary_borrow_string">借支</string>
    <string name="salary_cut_payment_string">扣款</string>
    <string name="salary_personal_security_string">个人社保</string>
    <string name="add_employee_join_date_string">入职时间</string>
    <string name="add_employee_join_date_input_string">点击选择日期</string>
    <string name="menu__add_employee_done">完成</string>
    <string name="salary_sale_string">销售提成</string>
    <string name="salary_click_input_string">点击输入</string>
    <string name="salary_service_string">服务提成</string>
    <string name="salary_progress_string">实施提成</string>
    <string name="salary_social_security_string">社保</string>
    <string name="salary_accident_insurance_string">意外保险</string>
    <string name="salary_life_allowance_string">生活补助</string>
    <string name="salary_other_string">其他</string>
    <string name="salary_special_string">特殊岗位</string>
    <string name="salary_post_string">岗位</string>
    <string name="menu_month_add">添加月份</string>
    <string name="salary_month_string">月份</string>
    <string name="frame_activity_title_string">员工列表</string>
    <string name="add_employee_activity_title_string">新增员工</string>
    <string name="salary_activity_title_string">当月工资核算</string>
    <string name="dialog_project_name_string">项目名称</string>
    <string name="dialog_project_money_string">金额</string>
    <string name="dialog_project_rate_string">提成比例</string>
    <string name="month_string">月</string>
    <string name="yuan_string">元</string>
    <string name="salary_business_leave_string">事假</string>
    <string name="salary_times_string">次</string>
    <string name="salary_sick_leave_string">病假</string>
    <string name="salary_late_string">迟到</string>
    <string name="salary_leave_early_string">早退</string>
    <string name="salary_absenteeism_string">旷工</string>
</resources>
