<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_project_name_string" />

        <EditText
            android:id="@+id/dialog_project_name_edit"
            style="@style/AppTheme.EditText"
            android:layout_weight="1"
            android:hint="@string/wait_input"
            android:inputType="number"
            android:lines="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_project_money_string" />

        <EditText
            android:id="@+id/dialog_project_money_edit"
            style="@style/AppTheme.EditText"
            android:layout_weight="1"
            android:hint="@string/wait_input"
            android:inputType="number"
            android:lines="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_project_rate_string" />

        <EditText
            android:id="@+id/dialog_project_rate_edit"
            style="@style/AppTheme.EditText"
            android:layout_weight="1"
            android:hint="@string/wait_input"
            android:inputType="number"
            android:lines="1" />
    </TableRow>

</TableLayout>